Bump parent to pom-imagej 14.0.0
This removes the old Java 3D management, in favor of
the inherited SciJava Java 3D version 1.6.0-scijava-2.