@@ -5,13 +5,13 @@
 	<parent>
 		<groupId>net.imagej</groupId>
 		<artifactId>pom-imagej</artifactId>
-		<version>13.3.0</version>
+		<version>14.0.0</version>
 		<relativePath />
 	</parent>
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>pom-fiji</artifactId>
-	<version>16.2.1-SNAPSHOT</version>
+	<version>17.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Fiji Projects</name>
@@ -119,7 +119,6 @@ Projects wishing to use pom-fiji as a parent project need to override the &lt;na
 		<commons-math.version>3.4.1</commons-math.version>
 		<edu.mines.version>20100113</edu.mines.version>
 		<itextpdf.version>5.1.1</itextpdf.version>
-		<java3d.version>1.5.2</java3d.version>
 		<jitk-tps.version>1.2.0</jitk-tps.version>
 		<jgrapht.version>0.8.3</jgrapht.version>
 		<jgraphx.version>1.10.4.1</jgraphx.version>
@@ -814,24 +813,6 @@ Projects wishing to use pom-fiji as a parent project need to override the &lt;na
 				<version>${itextpdf.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>java3d</groupId>
-				<artifactId>j3d-core</artifactId>
-				<version>${java3d.version}</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>java3d</groupId>
-				<artifactId>j3d-core-utils</artifactId>
-				<version>${java3d.version}</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
-				<groupId>java3d</groupId>
-				<artifactId>vecmath</artifactId>
-				<version>${java3d.version}</version>
-				<scope>provided</scope>
-			</dependency>
-			<dependency>
 				<groupId>net.sf.jgrapht</groupId>
 				<artifactId>jgrapht</artifactId>
 				<version>${jgrapht.version}</version>
@@ -1045,25 +1026,6 @@ Projects wishing to use pom-fiji as a parent project need to override the &lt;na
 						<configuration>
 							<source>1.5</source>
 							<target>1.5</target>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>macosx</id>
-			<activation>
-				<os>
-					<name>Mac OS X</name>
-				</os>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<configuration>
-							<compilerArgument>-Djava.ext.dirs=${rootdir}/java/macosx-java3d/Home/lib/ext</compilerArgument>
 						</configuration>
 					</plugin>
 				</plugins>
